hack/ingress_without_ingressClassName.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v1-ingress-without-icn
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
