hack/ingrezz_with_ingressClassName.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: v1-ingrezz-with-icn
  namespace: ingrezz
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-ingrezz-example
  rules:
  - http:
      paths:
      - path: /testpath
        pathType: Prefix
        backend:
          service:
            name: test
            port:
              number: 80
